--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,18 +1,64 @@
 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-    <div class="position-sticky pt-3 sidebar-sticky">
+  <div class="position-sticky pt-3 sidebar-sticky">
       <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">
-            <i class="bi bi-house"></i>
-            INICIO
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">
-            <i class="bi bi-patch-question"></i>
-            Salir
-          </a>
+          <li class="nav-item">
+              <a class="nav-link active" href="/incio">
+                  <i class="bi bi-house"></i>
+                  <span>INICIO</span>
+              </a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">
+                  <!-- Ícono y texto del Registro de Donantes -->
+                  <i class="bi bi-person-plus"></i>
+                  <span>Registro de Donantes</span>
+              </a>
+          </li>
+          
+          
+                <ul class="nav flex-column">
+                    <!-- Otros elementos del menú -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/registro-evaluacion-prealmacenamiento">
+                          <i class="bi bi-check2"></i>
+                          <span>Registro, Evaluación y Pre-almacenamiento</span> 
+                        </a>
+                    </li>
+                    <!-- Otros elementos del menú -->
+                  </ul>
+
+          <li class="nav-item">
+              <a class="nav-link" href="/analisis-resultados-laboratorio">
+                  <i class="bi bi-bar-chart"></i>
+                  <span>Análisis de Resultados de Laboratorio</span>
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/pasteurizacion-control-calidad">
+                  <i class="bi bi-thermometer"></i>
+                  <span>Pasteurización y Control de Calidad</span>
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/dosificacion-leche-materna">
+                  <i class="bi bi-droplet"></i>
+                  <span>Dosificación de Leche Materna</span>
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/reportes">
+                  <i class="bi bi-file-earmark-text"></i>
+                  <span>Reportes</span>
+              </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">
+                <i class="bi bi-patch-question"></i>
+                <span>Salir</span>
+            </a>
         </li>
       </ul>
-    </div>
-  </nav>
+
+  </div>
+</nav>
